try this link fix

--- a/themes/E25DX/layouts/docs/single.html
+++ b/themes/E25DX/layouts/docs/single.html
@@ -51,7 +51,7 @@
             <li>
               {{ if eq .Site.Language.Lang .Site.DefaultContentLanguage }}
                 {{ $href := printf "/%s/%s/" $.Section $pageSlug }}
-                <a class="{{ if $isActivePage }}active{{ end }}" href="{{ $href }}">
+                <a class="{{ if $isActivePage }}active{{ end }}" href="/Maths-in-Electronics/{{ $href }}">
                   {{ if and (eq $index 0) $group.replaceFirstPageTitle }}
                   {{ $group.replaceFirstPageTitle }}
                   {{ else }}
