--- a/themes/E25DX/layouts/docs/single.html
+++ b/themes/E25DX/layouts/docs/single.html
@@ -31,7 +31,7 @@
       <div>
         <button class="btn"><i>❌</i>{{ i18n "close" }}</button>
       </div>
-      <a href="/" class="site-logo">{{ .Site.Title }}</a>
+      <a href="/Maths-in-Electronics/docs/" class="site-logo">{{ .Site.Title }}</a>
 
       <nav role="navigation">
         {{ $data := index .Site.Data .Site.Language.Lang .Section "sidebar" }}
