should be the final fix

--- a/themes/E25DX/layouts/docs/single.html
+++ b/themes/E25DX/layouts/docs/single.html
@@ -81,7 +81,7 @@
 
   <div id="content-wrapper">
     <header>
-      <a href="/" class="site-logo">{{ .Site.Title }}</a>
+      <a href="/Maths-in-Electronics/docs" class="site-logo">{{ .Site.Title }}</a>
     </header>
 
     <main>
